<resources>
    <string name="app_name">BraiSee</string>
    <string name="version">Version 1.0</string>
    <string name="scan">Smart Braille</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="preview">Preview Gambar</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="learn">Learn</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="isi">Isi</string>
    <string name="scan_braille">Scan Braille</string>
    <string name="scan_camera">Scan From Camera</string>
    <string name="scan_gallery">Scan From Gallery</string>
    <string name="exit_confirm">Apakah Anda yakin ingin keluar?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="scan_failed">Scan failed. Try again.</string>
    <string name="save_failed">Save failed. Try again.</string>
    <string name="result_text">Label: %1$s\nConfidence: %.2f%%\nInference Time: %3$d ms</string>
    <string name="result_no_results">No results available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_label">Sample Label</string>
    <string name="module">Module</string>
    <string name="pemblajaran_braile">Pemblajaran Braile</string>


    <string-array name="list_module">
        <item>Module 1</item>
        <item>Module 2</item>
        <item>Module 3</item>
        <item>Module 4</item>
        <item>Module 5</item>
    </string-array>

    <string-array name="list_deskripsi">
        <item>Pemblajaran Tentang apa itu braile</item>
        <item>Pemblajaran Tentang jenis braile</item>
        <item>Pemblajaran Tentang apa itu braile</item>
        <item>Pemblajaran Tentang apa itu braile</item>
        <item>Pemblajaran Tentang apa itu braile</item>
    </string-array>

    <string-array name="list_ytlink">
        <item>https://www.youtube.com/watch?v=NQD0wdXdVLU</item>
        <item>https://www.youtube.com/watch?v=NQD0wdXdVLU</item>
        <item>https://www.youtube.com/watch?v=NQD0wdXdVLU</item>
        <item>https://www.youtube.com/watch?v=NQD0wdXdVLU</item>
        <item>https://www.youtube.com/watch?v=NQD0wdXdVLU</item>
    </string-array>










</resources>



